Added activation button, and some (not all) translations

--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -12,6 +12,7 @@
   "account_qr_code": "アカウントのQR コード",
   "accounts": "Accounts",
   "actions": "アクション",
+  "activate": "アクティベート",
   "add_answer": "回答を追加",
   "add_as_contact": "連絡先として追加",
   "add_asset": "資産追加",
@@ -632,8 +633,8 @@
   "no_polls_found": "投票調査が見つかりませんでした。",
   "no_products_found": "商品が見つかりません。",
   "no_products_listed_yet": "あなたはまだ、販売のための製品をリストに載せていません。 <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 追加してください。</a>。",
-  "no_public_key_activate": "このアカウントにはまだ公開鍵がありません。クリックしてアカウントを有効化し、保護します。",
-  "no_public_key_warning": "警告！: あなたのアカウントには公開キーがありません！ このことは、その他のアカウントのように保護されていないことを意味します。この問題を解決するために発信トランザクションを行う必要があります。",
+  "no_public_key_activate": "このアカウントはまだ有効化されていません。クリックしてアカウントを有効化し、保護します。",
+  "no_public_key_warning": "警告！：アカウントには公開鍵がありません！これは、他のアカウントほど保護されていないことを意味します。公開キーを取得するには、アカウントをアクティブにしてください。",
   "no_purchased_products_found": "購入商品が見つかりません。",
   "no_sell_orders_for_asset": "この資産の売り注文はありません。",
   "no_trade_history": "取引履歴がありません。",
