--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -12,6 +12,7 @@
   "account_qr_code": "QR Kod Računa",
   "accounts": "Accounts",
   "actions": "Akcije",
+  "activate": "",
   "add_answer": "Dodaj odgovor",
   "add_as_contact": "Dodaj u kontakte",
   "add_asset": "Dodaj asset",
