--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -12,6 +12,7 @@
   "account_qr_code": "QR kód účtu",
   "accounts": "Accounts",
   "actions": "Akcie",
+  "activate": "Aktivovať",
   "add_answer": "Pridať odpoveď",
   "add_as_contact": "Pridať ako kontakt",
   "add_asset": "Pridať majetok",
@@ -632,8 +633,8 @@
   "no_polls_found": "Žiadne hlasovanie sa nenašlo.",
   "no_products_found": "Neboli nájdené žiadne produkty.",
   "no_products_listed_yet": "Neuviedli ste zatiaľ žiadne produkty na predaj, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> pridať jeden.</a>",
-  "no_public_key_activate": "Tento účet zatiaľ nemá žiadny verejný kľúč. Kliknutím aktivujte a zabezpečte svoj účet.",
-  "no_public_key_warning": "Upozornenie!: váš účet nemá verejný kľúč! To znamená, že nie je tak chránený ako ostatné účty. Musíte vykonať jednu odchádzajúcu transakciu pre nápravu tohto problému.",
+  "no_public_key_activate": "Tento účet ešte nie je aktivovaný. Kliknutím aktivujte a zabezpečte svoj účet.",
+  "no_public_key_warning": "Varovanie !: Váš účet nemá verejný kľúč! To znamená, že nie je tak chránená ako iné účty. Aktivujte svoj účet a získajte verejný kľúč.",
   "no_purchased_products_found": "Nenašli sa žiadne zakúpené produkty.",
   "no_sell_orders_for_asset": "Žiadne príkazy na predaj tohto majetku.",
   "no_trade_history": "Žiadna obchodná história nie je dostupná.",
