--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -12,6 +12,7 @@
   "account_qr_code": "QR Код Налога",
   "accounts": "Accounts",
   "actions": "Акције",
+  "activate": "Активирати",
   "add_answer": "Додај Одговор",
   "add_as_contact": "Додај у Контакте",
   "add_asset": "Додај Асет",
@@ -632,8 +633,8 @@
   "no_polls_found": "Анкете нису пронађење.",
   "no_products_found": "Производи нису пронађени.",
   "no_products_listed_yet": "Нисте понудили ниједан производ на продају,  <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додајте један.</a>",
-  "no_public_key_activate": "Овај рачун још нема јавни кључ. Кликните да бисте активирали и заштитили свој налог.",
-  "no_public_key_warning": "Пажња!: Ваш налог не поседује јавни кључ! Ваш налог није заштићен као други налози. Морате извршити 1 одлазећу трансакцију да бисте поправили овај проблем.",
+  "no_public_key_activate": "Овај налог још није активиран. Кликните да бисте активирали и заштитили свој налог.",
+  "no_public_key_warning": "Упозорење !: Ваш налог нема јавни кључ! То значи да није заштићен као остали рачуни. Молимо активирајте свој рачун да бисте добили свој јавни кључ.",
   "no_purchased_products_found": "Нема нађених купљених производа.",
   "no_sell_orders_for_asset": "Нема продајних налога за овај ассет.",
   "no_trade_history": "Историја трговања не постоји.",
