--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -12,6 +12,7 @@
   "account_qr_code": "帳戶 QR 碼",
   "accounts": "Accounts",
   "actions": "操作",
+  "activate": "启用",
   "add_answer": "添加答案",
   "add_as_contact": "添加為聯絡人",
   "add_asset": "添加資產",
@@ -632,8 +633,8 @@
   "no_polls_found": "未找到投票。",
   "no_products_found": "未找到產品",
   "no_products_listed_yet": "你還沒有任何出售的產品<a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 添加一個。 </a>",
-  "no_public_key_activate": "此帐户还没有公钥。单击以激活并保护您的帐户。",
-  "no_public_key_warning": "警告 ！ ： 您的帳戶沒有公匙 ！這意味著不像其它帳戶一樣受到保護。您必須發生一次轉出交易來解決該問題。",
+  "no_public_key_activate": "此帐户尚未激活。单击以激活并保护您的帐户。",
+  "no_public_key_warning": "警告！：您的帐户没有公共密钥！这意味着它的保护程度不如其他帐户。请激活您的帐户以获取公共密钥。",
   "no_purchased_products_found": "未找到已購買的產品",
   "no_sell_orders_for_asset": "該資產沒有賣單。",
   "no_trade_history": "沒有歷史交易記錄。",
