--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Сметка QR код",
   "accounts": "Accounts",
   "actions": "Действие",
+  "activate": "Активирате",
   "add_answer": "Добави отговор",
   "add_as_contact": "Добави като контакт",
   "add_asset": "Добави актив",
@@ -632,8 +633,8 @@
   "no_polls_found": "Няма намерени анкети.",
   "no_products_found": "Няма намерени продукти.",
   "no_products_listed_yet": "Все още не сте вписали продукти за продажба",
-  "no_public_key_activate": "Този акаунт все още няма публичен ключ. Кликнете, за да активирате и защитите акаунта си.",
-  "no_public_key_warning": "Предупреждение!: вашата сметка няма публичен ключ! Това означава, че не е защитена като други сметки. Трябва да направите изходящ превод да решите проблема.",
+  "no_public_key_activate": "Този акаунт все още не е активиран. Кликнете, за да активирате и защитите акаунта си.",
+  "no_public_key_warning": "Внимание !: Вашият акаунт няма публичен ключ! Това означава, че не е толкова защитен, колкото другите акаунти. Моля, активирайте акаунта си, за да получите публичния си ключ.",
   "no_purchased_products_found": "Не са намерени закупени продукти.",
   "no_sell_orders_for_asset": "Няма поръчки за продажба за този актив.",
   "no_trade_history": "Няма история на търговията.",
