--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Codi QR del compte",
   "accounts": "Accounts",
   "actions": "Accions",
+  "activate": "Activa",
   "add_answer": "Afegir una resposta",
   "add_as_contact": "Afegir com a contacte",
   "add_asset": "Afegir actiu",
@@ -632,8 +633,8 @@
   "no_polls_found": "No s'han trobat enquestes.",
   "no_products_found": "No s'han trobat articles.",
   "no_products_listed_yet": "Encara no heu possat cap producte a la venta",
-  "no_public_key_activate": "Aquest compte encara no té clau pública. Feu clic per activar i protegir el vostre compte.",
-  "no_public_key_warning": "Alerta!: el vostre compte no té una clau pública! Això significa que no està tan protegida com altres comptes. Hi heu de fer una transacció per solucionar aquest problema.",
+  "no_public_key_activate": "Aquest compte encara no està activat. Feu clic per activar i protegir el vostre compte.",
+  "no_public_key_warning": "Avís: el vostre compte no té clau pública. Això vol dir que no està tan protegit com altres comptes. Activeu el vostre compte per obtenir la vostra clau pública.",
   "no_purchased_products_found": "No s'han trobat productes adquirits.",
   "no_sell_orders_for_asset": "No hi ha ordres de venta para aquest actiu.",
   "no_trade_history": "Historial de comerç no disponible.",
