--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -12,6 +12,7 @@
   "account_qr_code": "QR kód účtu",
   "accounts": "Accounts",
   "actions": "Akce",
+  "activate": "aktivovat",
   "add_answer": "Přidat odpověď",
   "add_as_contact": "Přidat jako kontakt",
   "add_asset": "Přidat aktivum",
@@ -632,8 +633,8 @@
   "no_polls_found": "Žádné ankety nebyly nalezeny.",
   "no_products_found": "Žádné produkty nebyly nalezeny.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_activate": "Tento účet zatím nemá veřejný klíč. Klepnutím aktivujte a zabezpečte svůj účet.",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_activate": "Tento účet zatím není aktivován. Klepnutím aktivujte a zabezpečte svůj účet.",
+  "no_public_key_warning": "Varování !: Váš účet nemá veřejný klíč! To znamená, že není tak chráněna jako jiné účty. Aktivujte svůj účet a získejte veřejný klíč.",
   "no_purchased_products_found": "Nebyly nalezeny žádné zakoupené produkty.",
   "no_sell_orders_for_asset": "Žádné příkazy k prodeji tohoto aktiva.",
   "no_trade_history": "Historie obchodování není k dispozici.",
