--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Account QR Code",
   "accounts": "Accounts",
   "actions": "Actions",
+  "activate": "Activate",
   "add_answer": "Add Answer",
   "add_as_contact": "Add as Contact",
   "add_asset": "Add Asset",
@@ -643,8 +644,8 @@
   "no_polls_found": "No polls found.",
   "no_products_found": "No products found.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_activate": "This account has no public key yet. Click to activate and secure your account.",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_activate": "This account is not activated yet. Click to activate and secure your account.",
+  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. Please activate your account to obtain your public key.",
   "no_purchased_products_found": "No purchased products found.",
   "no_sell_orders_for_asset": "No sell orders for this asset.",
   "no_trade_history": "No trade history available.",
