--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Tilin QR-koodi",
   "accounts": "Accounts",
   "actions": "Toiminnot",
+  "activate": "Aktivoida",
   "add_answer": "Lisää vastaus",
   "add_as_contact": "Lisää yhteystietoihin",
   "add_asset": "Lisää arvopaperi",
@@ -632,8 +633,8 @@
   "no_polls_found": "Ei galluppeja.",
   "no_products_found": "Ei tuotteita.",
   "no_products_listed_yet": "Et ole vielä lisännyt tuotteita myytäväksi, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> lisää yksi.</a>",
-  "no_public_key_activate": "Tällä tilillä ei ole vielä julkista avainta. Napsauta aktivoidaksesi ja suojataksesi tilisi.",
-  "no_public_key_warning": "Varoitus!: Tililläsi ei ole julkista avainta! Se ei ole niin suojattu kuin muut tilit. Sinun täytyy tehdä lähtevä tilitapahtuma korjataksesi tämän.",
+  "no_public_key_activate": "Tiliä ei ole vielä aktivoitu. Napsauta aktivoidaksesi ja suojataksesi tilisi.",
+  "no_public_key_warning": "Varoitus: tililläsi ei ole julkista avainta! Tämä tarkoittaa, että se ei ole yhtä suojattu kuin muut tilit. Aktivoi tilisi hankkiaksesi julkisen avaimen.",
   "no_purchased_products_found": "Ei ostettuja tuotteita.",
   "no_sell_orders_for_asset": "Ei myyntitoimeksiantoja tälle arvopaperille.",
   "no_trade_history": "Ei kaupankäyntihistoriaa saatavilla.",
