--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -12,6 +12,7 @@
   "account_qr_code": "खाता QR कोड",
   "accounts": "Accounts",
   "actions": "क्रिया",
+  "activate": "सक्रिय",
   "add_answer": "उत्तर जोड़ें",
   "add_as_contact": "संपर्क के रूप में जोड़ें",
   "add_asset": "संपत्ति जोड़ें",
@@ -632,8 +633,8 @@
   "no_polls_found": "कोई मतदान नहीं मिले।",
   "no_products_found": "कोई उत्पाद नहीं मिले।",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_activate": "इस खाते में अभी तक कोई सार्वजनिक कुंजी नहीं है। अपने खाते को सक्रिय और सुरक्षित करने के लिए क्लिक करें।",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_activate": "यह खाता अभी तक सक्रिय नहीं है। अपने खाते को सक्रिय और सुरक्षित करने के लिए क्लिक करें।",
+  "no_public_key_warning": "चेतावनी !: आपके खाते में सार्वजनिक कुंजी नहीं है! इसका मतलब है कि यह अन्य खातों की तरह संरक्षित नहीं है। अपनी सार्वजनिक कुंजी प्राप्त करने के लिए कृपया अपने खाते को सक्रिय करें।",
   "no_purchased_products_found": "कोई खरीदे उत्पाद नहीं मिले।",
   "no_sell_orders_for_asset": "इस सम्पत्ति के लिए कोई बेचने के आदेश नहीं।",
   "no_trade_history": "कोई व्यापार इतिहास उपलब्ध नहीं।",
