--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Account QR Code",
   "accounts": "Accounts",
   "actions": "Azioni",
+  "activate": "Attivare",
   "add_answer": "Aggiungi risposta",
   "add_as_contact": "Aggiungi come contatto",
   "add_asset": "Aggiungi Asset",
@@ -632,8 +633,8 @@
   "no_polls_found": "Nessun sondaggio trovato.",
   "no_products_found": "Nessun prodotto trovato.",
   "no_products_listed_yet": "Non hai ancora messo alcun prodotto in vendita, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> aggiungine uno.</a>",
-  "no_public_key_activate": "Questo account non ha ancora una chiave pubblica. Fai clic per attivare e proteggere il tuo account.",
-  "no_public_key_warning": "Attenzione!: l'account non dispone di una chiave pubblica! Ciò significa che non è protetto come gli altri account. È necessario effettuare una transazione in uscita per risolvere questo problema.",
+  "no_public_key_activate": "Questo account non è ancora attivato. Fai clic per attivare e proteggere il tuo account.",
+  "no_public_key_warning": "Attenzione !: Il tuo account non ha una chiave pubblica! Ciò significa che non è protetto come gli altri account. Si prega di attivare il proprio account per ottenere la chiave pubblica.",
   "no_purchased_products_found": "Nessun prodotto acquistato trovato.",
   "no_sell_orders_for_asset": "Nessun ordine di vendita per questo asset.",
   "no_trade_history": "Storico operazioni non disponibile.",
