--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Sąskaitos QR kodas",
   "accounts": "Accounts",
   "actions": "Veiksmai",
+  "activate": "Suaktyvinti",
   "add_answer": "Pridėti atsakymą",
   "add_as_contact": "Pridėti kontaktą",
   "add_asset": "Pridėti aktyvą",
@@ -632,8 +633,8 @@
   "no_polls_found": "Nerasta apklausų.",
   "no_products_found": "Prekių nerasta.",
   "no_products_listed_yet": "Jūs dar neturite produktų pardavimui, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> pridėkite juos.</a>",
-  "no_public_key_activate": "Šioje paskyroje dar nėra viešojo rakto. Spustelėkite, kad suaktyvintumėte ir apsaugotumėte savo sąskaitą.",
-  "no_public_key_warning": "Įspėjimas!: Jūsų sąskaita neturi viešojo rakto! Tai reiškia, ji nėra apsaugota kaip kitos sąskaitos. Jūs turite padaryti išeinančią transakciją, kad išspręstumėte šią problemą.",
+  "no_public_key_activate": "Ši sąskaita dar nesuaktyvinta. Spustelėkite, kad suaktyvintumėte ir apsaugotumėte savo sąskaitą.",
+  "no_public_key_warning": "Įspėjimas: jūsų paskyroje nėra viešojo rakto! Tai reiškia, kad jis nėra toks apsaugotas kaip kitos sąskaitos. Aktyvuokite savo sąskaitą, kad gautumėte savo viešąjį raktą.",
   "no_purchased_products_found": "Nerasta įsigytų produktų.",
   "no_sell_orders_for_asset": "Nėra šio aktyvo pardavimo užsakymų.",
   "no_trade_history": "Prekybos istorijos nėra.",
