--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -12,6 +12,7 @@
   "account_qr_code": "Hesap QR Kodu",
   "accounts": "Accounts",
   "actions": "işlemler",
+  "activate": "etkinleştirme",
   "add_answer": "Cevap Ekle",
   "add_as_contact": "Rehbere ekle ",
   "add_asset": "Ürün ekle",
@@ -632,8 +633,8 @@
   "no_polls_found": "No polls found.",
   "no_products_found": "No products found.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_activate": "Bu hesabın henüz genel anahtarı yok. Hesabınızı etkinleştirmek ve güvence altına almak için tıklayın.",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_activate": "Bu hesap henüz aktif değil. Hesabınızı etkinleştirmek ve güvence altına almak için tıklayın.",
+  "no_public_key_warning": "Uyarı !: Hesabınızın ortak bir anahtarı yok! Bu, diğer hesaplar gibi korunmadığı anlamına gelir. Ortak anahtarınızı almak için lütfen hesabınızı etkinleştirin.",
   "no_purchased_products_found": "No purchased products found.",
   "no_sell_orders_for_asset": "No sell orders for this asset.",
   "no_trade_history": "No trade history available.",
