--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -12,6 +12,7 @@
   "account_qr_code": "QR-код аккаунта",
   "accounts": "Accounts",
   "actions": "Дії",
+  "activate": "Активуйте",
   "add_answer": "Додати відповідь",
   "add_as_contact": "Додати як контакт",
   "add_asset": "Додати актив",
@@ -632,8 +633,8 @@
   "no_polls_found": "Опитування не знайдено.",
   "no_products_found": "Немає жодного товару.",
   "no_products_listed_yet": "Ви ще не опублікували товари для продажу <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додати один.</a>",
-  "no_public_key_activate": "У цього облікового запису ще немає відкритого ключа. Клацніть, щоб активувати та захистити свій обліковий запис.",
-  "no_public_key_warning": "Попередження!: ваш аккаунт не має відкритого ключа! Це означає, що ваш аккаунт не захищений належним чином. Ви повинні зробити хоч би одну витікаючу транзакцію, щоб виправити цю проблему.",
+  "no_public_key_activate": "Цей обліковий запис ще не активовано. Клацніть, щоб активувати та захистити свій обліковий запис.",
+  "no_public_key_warning": "Увага !: У вашому обліковому записі немає відкритого ключа! Це означає, що він не настільки захищений, як інші облікові записи. Будь ласка, активуйте свій обліковий запис, щоб отримати ваш відкритий ключ.",
   "no_purchased_products_found": "Куплені товари не знайдені .",
   "no_sell_orders_for_asset": "Немає заявок на продаж цього активу.",
   "no_trade_history": "Історія торгівлі не доступна.",
