--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -63,7 +63,8 @@
         "activeAccountHint": "Активные аккаунты используются для совершения BURST транзакций. Необходимо сгенерировать или ввести кодовую фразу. Пользователь должен создать PIN-код для транзакций. Кодовая фраза используется только для шифрования приватного ключа и нигде не сохраняется.",
         "import": "Добавить",
         "passiveAccountHint": "Пассивные аккаунты используются если известен BURST-адрес, но нет необходимости совершать транзакции. Это безопаснее. Пассивный аккаунт всегда можно преобразовать в активный.",
-        "title": "Добавить аккаунт"
+        "title": "Добавить аккаунт",
+        "showPassphrase": "Показать фразу"
       }
     }
   },
