Added activation for new accounts, and completed transalation

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -13,6 +13,8 @@
   "accounts": "Accounts",
   "actions": "Действие",
   "activate": "Активирате",
+  "activation_failed": "Активирането не бе успешно:",
+  "activation_success": "Успешно заявено активиране. Вашият акаунт ще бъде активиран след няколко момента.",
   "add_answer": "Добави отговор",
   "add_as_contact": "Добави като контакт",
   "add_asset": "Добави актив",
