--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -13,6 +13,8 @@
   "accounts": "Accounts",
   "actions": "Ενέργειες",
   "activate": "Θέτω εις ενέργειαν",
+  "activation_failed": "Η ενεργοποίηση απέτυχε:",
+  "activation_success": "Επιτυχής αιτούμενη ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
   "add_answer": "Προσθήκη απάντησης",
   "add_as_contact": "Προσθήκη ως επαφή",
   "add_asset": "Προσθήκη μετοχής",
