--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -13,6 +13,8 @@
   "accounts": "Accounts",
   "actions": "Действия",
   "activate": "Активировать",
+  "activation_failed": "Активация не удалось:",
+  "activation_success": "Успешно запрошена активация. Ваш аккаунт будет активирован через несколько секунд.",
   "add_answer": "Добавить Ответ",
   "add_as_contact": "Добавить контакт",
   "add_asset": "Добавить актив",
