--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -13,6 +13,8 @@
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "",
+  "activation_failed": "",
+  "activation_success": "",
   "add_answer": "Dodaj odgovor",
   "add_as_contact": "Dodaj u kontakte",
   "add_asset": "Dodaj asset",
