--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -13,6 +13,8 @@
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Активирати",
+  "activation_failed": "Активација није успела:",
+  "activation_success": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "add_answer": "Dodaj Odgovor",
   "add_as_contact": "Dodaj u Kontakte",
   "add_asset": "Dodajte Asset",
